# MeetingAi

./: CMakeLists.txt  README.md  audio_device_json.hpp  audio_devices.json  audio_transcriber.py  audio_transcriber.spec  gen_add_data.py  qa_transcription.json  simple_good_morning.cpp  test.py  transcription.json
